--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>cloud-nacos-9001</module>
         <module>cloud-nacos-9002</module>
         <module>cloud-consumer-nacos-8083</module>
+        <module>cloud-config-nacos-3377</module>
     </modules>
 
 </project>
